// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupsListScreen handleScroll paginates when close to bottom 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -349,11 +349,11 @@
              \\"nodes\\": Array [],
            },
            \\"report\\": Object {
              \\"__typename\\": \\"CommunitiesReport\\",
              \\"contactCount\\": 0,
-             \\"memberCount\\": 41702,
+             \\"memberCount\\": 66344,
              \\"unassignedCount\\": 0,
            },
            \\"unreadCommentsCount\\": 0,
          },
          Object {
@@ -633,11 +633,291 @@
              \\"contactCount\\": 26992,
              \\"memberCount\\": 35653,
              \\"unassignedCount\\": 89588,
            },
            \\"unreadCommentsCount\\": 88330,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"quia ipsum sit\\",
+           \\"id\\": \\"13\\",
+           \\"name\\": \\"Networked mobile approach\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Gordon\\",
+                 \\"lastName\\": \\"Balistreri\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Benton\\",
+                 \\"lastName\\": \\"Barrows\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 50981,
+             \\"memberCount\\": 24621,
+             \\"unassignedCount\\": 10213,
+           },
+           \\"unreadCommentsCount\\": 51886,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"quis ut incidunt\\",
+           \\"id\\": \\"14\\",
+           \\"name\\": \\"Cross-group regional throughput\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Kattie\\",
+                 \\"lastName\\": \\"Wisoky\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Ronaldo\\",
+                 \\"lastName\\": \\"Gorczany\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 12417,
+             \\"memberCount\\": 23362,
+             \\"unassignedCount\\": 27918,
+           },
+           \\"unreadCommentsCount\\": 86002,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"qui similique ut\\",
+           \\"id\\": \\"15\\",
+           \\"name\\": \\"Business-focused heuristic forecast\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Haylie\\",
+                 \\"lastName\\": \\"Macejkovic\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Freeda\\",
+                 \\"lastName\\": \\"Auer\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 81299,
+             \\"memberCount\\": 80063,
+             \\"unassignedCount\\": 28976,
+           },
+           \\"unreadCommentsCount\\": 9155,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"porro aut laborum\\",
+           \\"id\\": \\"16\\",
+           \\"name\\": \\"Organized value-added groupware\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Gideon\\",
+                 \\"lastName\\": \\"Kautzer\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Salma\\",
+                 \\"lastName\\": \\"Rolfson\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 74712,
+             \\"memberCount\\": 42781,
+             \\"unassignedCount\\": 55624,
+           },
+           \\"unreadCommentsCount\\": 23297,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"dolores commodi inventore\\",
+           \\"id\\": \\"17\\",
+           \\"name\\": \\"Implemented contextually-based process improvement\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Candida\\",
+                 \\"lastName\\": \\"Cartwright\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Tressa\\",
+                 \\"lastName\\": \\"Bayer\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 91640,
+             \\"memberCount\\": 10749,
+             \\"unassignedCount\\": 78195,
+           },
+           \\"unreadCommentsCount\\": 42838,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"et quo aperiam\\",
+           \\"id\\": \\"18\\",
+           \\"name\\": \\"Triple-buffered real-time local area network\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Keenan\\",
+                 \\"lastName\\": \\"O'Keefe\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Adolph\\",
+                 \\"lastName\\": \\"Christiansen\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 7197,
+             \\"memberCount\\": 29435,
+             \\"unassignedCount\\": 96727,
+           },
+           \\"unreadCommentsCount\\": 22570,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"similique ad sed\\",
+           \\"id\\": \\"19\\",
+           \\"name\\": \\"Front-line 24 hour product\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"April\\",
+                 \\"lastName\\": \\"Fritsch\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Camylle\\",
+                 \\"lastName\\": \\"Roberts\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 16161,
+             \\"memberCount\\": 19542,
+             \\"unassignedCount\\": 93871,
+           },
+           \\"unreadCommentsCount\\": 36081,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"quis ut ab\\",
+           \\"id\\": \\"20\\",
+           \\"name\\": \\"Polarised bottom-line firmware\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Rosella\\",
+                 \\"lastName\\": \\"Robel\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Dax\\",
+                 \\"lastName\\": \\"Gulgowski\\",
                },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 49376,
+             \\"memberCount\\": 20435,
+             \\"unassignedCount\\": 61995,
+           },
+           \\"unreadCommentsCount\\": 58135,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"eum saepe nesciunt\\",
+           \\"id\\": \\"21\\",
+           \\"name\\": \\"Organized intangible ability\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Noble\\",
+                 \\"lastName\\": \\"Auer\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Mac\\",
+                 \\"lastName\\": \\"Bernier\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 3968,
+             \\"memberCount\\": 48634,
+             \\"unassignedCount\\": 81387,
+           },
+           \\"unreadCommentsCount\\": 98175,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"omnis similique blanditiis\\",
+           \\"id\\": \\"22\\",
+           \\"name\\": \\"Team-oriented next generation frame\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Emiliano\\",
+                 \\"lastName\\": \\"Lemke\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Yasmeen\\",
+                 \\"lastName\\": \\"Brekke\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 57974,
+             \\"memberCount\\": 14603,
+             \\"unassignedCount\\": 38014,
+           },
+           \\"unreadCommentsCount\\": 60632,
+         },
        ]
      }
      disableVirtualization={false}
      getItem={[Function anonymous]}
      getItemCount={[Function anonymous]}
@@ -694,11 +974,11 @@
                  \\"nodes\\": Array [],
                },
                \\"report\\": Object {
                  \\"__typename\\": \\"CommunitiesReport\\",
                  \\"contactCount\\": 0,
-                 \\"memberCount\\": 41702,
+                 \\"memberCount\\": 66344,
                  \\"unassignedCount\\": 0,
                },
                \\"unreadCommentsCount\\": 0,
              }
            }
@@ -1049,11 +1329,11 @@
          />
        </View>
        <View
          style={
            Object {
-             \\"height\\": 4198.75,
+             \\"height\\": 8397.5,
            }
          }
        />
      </View>
    </RCTScrollView>"
`;

exports[`GroupsListScreen handleScroll should not load more when no next page 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`GroupsListScreen handleScroll should not load more when not scrolling close to bottom 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`GroupsListScreen renders with communities 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="menuButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "aut delectus aut",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 20,
                    "height": 42,
                    "width": 42,
                  },
                  Object {
                    "backgroundColor": "rgb(122, 19, 115)",
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 4,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "white",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 20,
              },
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 24,
              },
            ]
          }
        >
          Communities
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="joinCommunity"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#005A7F",
                  "flexBasis": 40,
                  "justifyContent": "center",
                  "paddingVertical": 13,
                },
                Object {
                  "borderRightColor": "#007398",
                  "borderRightWidth": 1,
                },
              ],
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textAlign": "center",
                  "textTransform": "uppercase",
                },
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textTransform": "uppercase",
                },
              ]
            }
          >
            JOIN A COMMUNITY
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="createCommunity"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "#005A7F",
                "flexBasis": 40,
                "justifyContent": "center",
                "paddingVertical": 13,
              },
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textAlign": "center",
                  "textTransform": "uppercase",
                },
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textTransform": "uppercase",
                },
              ]
            }
          >
            CREATE A COMMUNITY
          </Text>
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView
    data={
      Array [
        Object {
          "__typename": "Community",
          "communityPhotoUrl": null,
          "id": "_global_community_id",
          "name": "MissionHub",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 0,
            "memberCount": 41702,
            "unassignedCount": 0,
          },
          "unreadCommentsCount": 0,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "quam tempore a",
          "id": "1",
          "name": "Vision-oriented non-volatile system engine",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Hannah",
                "lastName": "Lemke",
              },
              Object {
                "__typename": "Person",
                "firstName": "Clinton",
                "lastName": "Pollich",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 28962,
            "memberCount": 31551,
            "unassignedCount": 14212,
          },
          "unreadCommentsCount": 59306,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "repellendus fugiat velit",
          "id": "2",
          "name": "Adaptive bandwidth-monitored encryption",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Aida",
                "lastName": "Barton",
              },
              Object {
                "__typename": "Person",
                "firstName": "Nelson",
                "lastName": "Mueller",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 98886,
            "memberCount": 66063,
            "unassignedCount": 74816,
          },
          "unreadCommentsCount": 68650,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "minima ducimus temporibus",
          "id": "3",
          "name": "Vision-oriented bifurcated core",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Damaris",
                "lastName": "Brakus",
              },
              Object {
                "__typename": "Person",
                "firstName": "Antwon",
                "lastName": "King",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 46923,
            "memberCount": 90859,
            "unassignedCount": 9617,
          },
          "unreadCommentsCount": 29849,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "ut quis sed",
          "id": "4",
          "name": "Compatible foreground collaboration",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Breana",
                "lastName": "Ledner",
              },
              Object {
                "__typename": "Person",
                "firstName": "Aimee",
                "lastName": "Boehm",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 67883,
            "memberCount": 91686,
            "unassignedCount": 21162,
          },
          "unreadCommentsCount": 29361,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "ut ullam quos",
          "id": "5",
          "name": "Innovative encompassing moratorium",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Krystina",
                "lastName": "Becker",
              },
              Object {
                "__typename": "Person",
                "firstName": "Kennedy",
                "lastName": "Marvin",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 61393,
            "memberCount": 14672,
            "unassignedCount": 95653,
          },
          "unreadCommentsCount": 91044,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "quaerat cumque incidunt",
          "id": "6",
          "name": "Integrated user-facing intranet",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Bartholome",
                "lastName": "Lemke",
              },
              Object {
                "__typename": "Person",
                "firstName": "Harrison",
                "lastName": "Wiegand",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 69440,
            "memberCount": 49305,
            "unassignedCount": 41417,
          },
          "unreadCommentsCount": 58930,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "ab voluptas sed",
          "id": "7",
          "name": "Switchable full-range extranet",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Alverta",
                "lastName": "Ondricka",
              },
              Object {
                "__typename": "Person",
                "firstName": "Brook",
                "lastName": "Larkin",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 79240,
            "memberCount": 94459,
            "unassignedCount": 2980,
          },
          "unreadCommentsCount": 54060,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "aut ut ut",
          "id": "8",
          "name": "Public-key incremental concept",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Brionna",
                "lastName": "King",
              },
              Object {
                "__typename": "Person",
                "firstName": "Broderick",
                "lastName": "Toy",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 80739,
            "memberCount": 37758,
            "unassignedCount": 39767,
          },
          "unreadCommentsCount": 58655,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "dolorem et molestiae",
          "id": "9",
          "name": "Monitored system-worthy contingency",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Frances",
                "lastName": "Hegmann",
              },
              Object {
                "__typename": "Person",
                "firstName": "Khalid",
                "lastName": "Rohan",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 63783,
            "memberCount": 72599,
            "unassignedCount": 12631,
          },
          "unreadCommentsCount": 53842,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "est fuga est",
          "id": "10",
          "name": "Ameliorated intangible moratorium",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Nettie",
                "lastName": "Herman",
              },
              Object {
                "__typename": "Person",
                "firstName": "Favian",
                "lastName": "Ruecker",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 26992,
            "memberCount": 35653,
            "unassignedCount": 89588,
          },
          "unreadCommentsCount": 88330,
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
    testID="flatList"
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": null,
              "id": "_global_community_id",
              "name": "MissionHub",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 0,
                "memberCount": 41702,
                "unassignedCount": 0,
              },
              "unreadCommentsCount": 0,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "quam tempore a",
              "id": "1",
              "name": "Vision-oriented non-volatile system engine",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Hannah",
                    "lastName": "Lemke",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Clinton",
                    "lastName": "Pollich",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 28962,
                "memberCount": 31551,
                "unassignedCount": 14212,
              },
              "unreadCommentsCount": 59306,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "repellendus fugiat velit",
              "id": "2",
              "name": "Adaptive bandwidth-monitored encryption",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Aida",
                    "lastName": "Barton",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Nelson",
                    "lastName": "Mueller",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 98886,
                "memberCount": 66063,
                "unassignedCount": 74816,
              },
              "unreadCommentsCount": 68650,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "minima ducimus temporibus",
              "id": "3",
              "name": "Vision-oriented bifurcated core",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Damaris",
                    "lastName": "Brakus",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Antwon",
                    "lastName": "King",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 46923,
                "memberCount": 90859,
                "unassignedCount": 9617,
              },
              "unreadCommentsCount": 29849,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "ut quis sed",
              "id": "4",
              "name": "Compatible foreground collaboration",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Breana",
                    "lastName": "Ledner",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Aimee",
                    "lastName": "Boehm",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 67883,
                "memberCount": 91686,
                "unassignedCount": 21162,
              },
              "unreadCommentsCount": 29361,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "ut ullam quos",
              "id": "5",
              "name": "Innovative encompassing moratorium",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Krystina",
                    "lastName": "Becker",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Kennedy",
                    "lastName": "Marvin",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 61393,
                "memberCount": 14672,
                "unassignedCount": 95653,
              },
              "unreadCommentsCount": 91044,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "quaerat cumque incidunt",
              "id": "6",
              "name": "Integrated user-facing intranet",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Bartholome",
                    "lastName": "Lemke",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Harrison",
                    "lastName": "Wiegand",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 69440,
                "memberCount": 49305,
                "unassignedCount": 41417,
              },
              "unreadCommentsCount": 58930,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "ab voluptas sed",
              "id": "7",
              "name": "Switchable full-range extranet",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Alverta",
                    "lastName": "Ondricka",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Brook",
                    "lastName": "Larkin",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 79240,
                "memberCount": 94459,
                "unassignedCount": 2980,
              },
              "unreadCommentsCount": 54060,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "aut ut ut",
              "id": "8",
              "name": "Public-key incremental concept",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Brionna",
                    "lastName": "King",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Broderick",
                    "lastName": "Toy",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 80739,
                "memberCount": 37758,
                "unassignedCount": 39767,
              },
              "unreadCommentsCount": 58655,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "dolorem et molestiae",
              "id": "9",
              "name": "Monitored system-worthy contingency",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Frances",
                    "lastName": "Hegmann",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Khalid",
                    "lastName": "Rohan",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 63783,
                "memberCount": 72599,
                "unassignedCount": 12631,
              },
              "unreadCommentsCount": 53842,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={
          Object {
            "height": 4198.75,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`GroupsListScreen renders with only global community 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="menuButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 20,
                      "height": 42,
                      "width": 42,
                    },
                    Object {
                      "backgroundColor": "#B4B6BA",
                    },
                    undefined,
                  ],
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 26,
                      "fontWeight": "300",
                    },
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 4,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "white",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 20,
              },
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 24,
              },
            ]
          }
        >
          Communities
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="joinCommunity"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#005A7F",
                  "flexBasis": 40,
                  "justifyContent": "center",
                  "paddingVertical": 13,
                },
                Object {
                  "borderRightColor": "#007398",
                  "borderRightWidth": 1,
                },
              ],
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textAlign": "center",
                  "textTransform": "uppercase",
                },
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textTransform": "uppercase",
                },
              ]
            }
          >
            JOIN A COMMUNITY
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="createCommunity"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "#005A7F",
                "flexBasis": 40,
                "justifyContent": "center",
                "paddingVertical": 13,
              },
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textAlign": "center",
                  "textTransform": "uppercase",
                },
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textTransform": "uppercase",
                },
              ]
            }
          >
            CREATE A COMMUNITY
          </Text>
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView
    data={
      Array [
        Object {
          "__typename": "Community",
          "communityPhotoUrl": null,
          "id": "_global_community_id",
          "name": "MissionHub",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 0,
            "memberCount": 0,
            "unassignedCount": 0,
          },
          "unreadCommentsCount": 0,
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
    testID="flatList"
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": null,
              "id": "_global_community_id",
              "name": "MissionHub",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 0,
                "memberCount": 0,
                "unassignedCount": 0,
              },
              "unreadCommentsCount": 0,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;
